# news_letter

./: .env  Cargo.toml  Dockerfile  configuration.json  docker-compose.yml  general.yml  spec.yml
.github/workflows/: rust.yml
configuration/: base.yml  local.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
