[package]
name = "newsLetter"
version = "0.1.0"
authors = ["Devesh Rawat"]
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="newsLetter"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = {version ="1.34.0", features = ["macros", "rt-multi-thread"]}



[dev-dependencies]
reqwest = "0.11.22"



[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

