[package]
name = "newsLetter"
version = "0.1.0"
authors = ["Devesh Rawat"]
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name="newsLetter"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
config = "0.13.4"
dotenv = "0.15.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.5.9", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = {version ="1.34.0", features = ["macros", "rt-multi-thread"]}
uuid = { version = "0.8.2", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.18.0"
secrecy = { version = "0.8", features = ["serde"] }


[dev-dependencies]
reqwest = "0.11.22"



[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

